objects/CN_Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Product</relationshipLabel>
        <relationshipName>competitor_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City__c</fullName>
        <formula>CN_Account__r.CN_City_CN__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Category__c</fullName>
        <label>Customer category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>&apos;00N1m00000A9HGy.00N5h000004unSA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_EA__c</fullName>
        <label>EA(incl. TAX)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Price_Alert_At__c</fullName>
        <label>Price alert at</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Category__c</fullName>
        <label>Product Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitor Product</relationshipLabel>
        <relationshipName>Competitor_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Reference_Price__c</fullName>
        <label>Reference Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>South</fullName>
                    <default>true</default>
                    <label>South</label>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_SKU_Code__c</fullName>
        <formula>CN_Product__r.CN_SKU_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Name__c</fullName>
        <formula>CN_Product__r.CN_SKU_Description_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Specification__c</fullName>
        <label>Specification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sub_Category_Brand__c</fullName>
        <description>Sub_Category_2_Brand__c</description>
        <label>Sub-Category 2---Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sub_Category__c</fullName>
        <description>Sub_Category_1</description>
        <label>Sub-Category 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Competitor Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Product_Name__c</columns>
        <columns>CN_Sub_Category__c</columns>
        <columns>CN_Sub_Category_Brand__c</columns>
        <columns>CN_Product_Category__c</columns>
        <columns>CN_Specification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Product</pluralLabel>
    <recordTypes>
        <fullName>CN_Competitor</fullName>
        <active>true</active>
        <label>CN Competitor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>